# data-migration

./: data_migrate.ipynb  pyproject.toml
src/config/: config.py
src/data_migrator/: __init__.py  data_migrator.py  types_map.py
src/database_driver/: __init__.py  columns_info.py  driver_base.py
src/database_driver/clickhouse/: __init__.py  driver_clickhouse.py
src/database_driver/clickhouse/queries/: __init__.py  create_table_query.py
src/database_driver/common_queries/: __init__.py  select_columns_info_query.py  select_increment_query.py
src/database_driver/postgresql/: __init__.py  driver_postgresql.py
